# faf-allocator-bench

./: Cargo.toml  README.md  sudo
.cargo/: config
src/: args.rs  main.rs  statics.rs
